--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jade": "~1.9.2",
     "less-middleware": "1.0.x",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "mongoose": "4.0.5",
+    "jsonwebtoken": "5.0.1"
   }
 }
