--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
+    "jsonwebtoken": "5.0.1",
     "less-middleware": "1.0.x",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
     "mongoose": "4.0.5",
-    "jsonwebtoken": "5.0.1"
+    "morgan": "~1.5.3",
+    "node-env-file": "^0.1.7",
+    "passport": "~0.2.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "~1.0.0",
+    "serve-favicon": "~2.2.1"
   }
 }
